chaging background color

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 .main {
   font-family: "Audiowide", cursive;
   font-size: 16px;
-  background: linear-gradient(120deg, hsl(166, 95%, 51%), hsl(166, 95%, 41%));
+  background-color: #09ff48;
   min-height: 100vh;
   display: flex;
   align-items: center;
